tambah section & modifikasi navbar
masih ada bug di sidebar

--- a/Tugas2/html/index.html
+++ b/Tugas2/html/index.html
@@ -10,72 +10,108 @@
     <button class="openbtn" onclick="openNav()">☰ Sidebar</button>
     <nav class="navbar">Flappy<span> Dolp</span></nav>
 
-    <div class="row">
+<!-- start hero -->
+<section class="hero">
+  
+</section>
+<!-- end hero -->
+
+
+
+
+
+
+    <!-- start deskripsi game -->
+    <section class="deskripsi" id="deskripsi">
+      <h1>Tentang Game</h1>
+      <p>
+        "Flappy Dolphin" adalah permainan yang menguji ketangkasan pemainnya. Dalam permainan ini, pemain mengendalikan seekor lumba-lumba yang harus
+        melewati rintangan-rintangan dengan cara menghindarinya. Lumba-lumba akan terus bergerak maju secara otomatis, dan pemain hanya perlu mengetuk
+        layar untuk membuatnya melompat. Tujuan utama adalah bertahan sebanyak mungkin, karena setiap kali lumba-lumba menabrak rintangan,
+        permainan akan berakhir.
+      </p>
+    </section>
+    <!-- end deskripsi game -->
+
+    <!-- start flowchart game -->
+    <section class="flowchart" id="flowchart">
+      <h1>Flowchart Game</h1>
+      <img src="../img/Flowchart 1.jpg" alt="" />
+    </section>
+    <!-- end flowchart game -->
+
+    <!-- start skenario -->
+    <section class="skenario" id="skenario">
+      <h1>Skenario Game</h1>
+      <h2 class="pengantar">Pengantar:</h2>
+      <p class="pengantar">
+        Di perairan tropis yang luas dan indah, hiduplah seekor lumba-lumba yang lucu dan ceria bernama Flappy. Flappy adalah lumba-lumba muda yang
+        ingin menjelajahi lautan dan menemukan dunia baru. Pemain akan mengendalikan Flip dalam petualangan melintasi samudra yang penuh dengan
+        rintangan.
+      </p>
+      <h2>Adegan 1</h2>
+      <p>
+        Awal Petualangan Pemain diperkenalkan dengan Flappy, lumba-lumba yang ceria, di habitat aslinya di lautan. Mereka belajar cara mengendalikan
+        Flappy saat dia melompat di udara dan meluncur di atas permukaan air. Pemain kemudian dihadapkan pada tugas untuk memandu Flappy melewati
+        rintangan awal dan mengumpulkan poin dengan melompati tiang bambu yang tersedia.
+      </p>
+      <h2>Adegan 2</h2>
+      <p>
+        Petualangan di Laut Dangkal Flappy memasuki area laut dangkal yang penuh dengan terumbu karang dan ikan-ikan kecil yang berenang. Pemain harus
+        memandu Flappy melewati pipa rintangan tanpa menyentuhnya. Mereka juga harus mengumpulkan skor yang dihasilkan dari melewati 1 tiang pipa.
+      </p>
+      <h2>Adegan 3</h2>
+      <p>
+        Menelusuri Kedalaman Laut Flappy terus melewati setiap rintangan dan mencapai kedalaman laut yang gelap dan misterius. Pemain harus
+        menuntunnya melewati rintangan pipa yang semakin banyak. Pemain harus menggunakan refleks yang cepat untuk mencegah Flappy tertabrak.
+      </p>
+      <h2>Adegan 4</h2>
+      <p>
+        Kemenangan Setelah melewati semua rintangan, Flappy dan permainan menemukan sebuah peti harta karun, dan membukanya. Mereka sadar bahwa itu
+        adalah hadiah dari kemenangan mereka setelah melalui rintangan yang berat.
+      </p>
+      <h2>Adegan 5</h2>
+      <p>
+        Petualangan Baru Meskipun petualangan mereka telah berakhir, Flappy dan pemain menyadari bahwa masih banyak tempat baru untuk dijelajahi di
+        lautan. Mereka bersiap untuk petualangan berikutnya, siap menghadapi tantangan baru yang menanti di sepanjang jalan.
+      </p>
+    </section>
+    <!-- end skenario -->
+
+    <div class="row" id="Pengembang">
+      <h1>Pengembang</h1>
       <div class="kanan">
         <div class="content">
-          <img
-            class="foto"
-            src="../img/hawa.jpg"
-            width="200"
-            height="200"
-            style="border-radius: 50%"
-            alt=""
-          />
+          <img class="foto" src="../img/hawa.jpg" width="200" height="200" style="border-radius: 50%" alt="" />
           <p>Hawa Shabilla Fanfa</p>
           <p>22082010239</p>
           <div class="container">
-            Saya lahir di Kota Purbalingga pada tanggal 10 Maret 2004. Saat ini,
-            saya tengah menempuh pendidikan di Universitas Pembangunan Nasional
-            “Veteran” Jawa Timur, dengan jurusan yang saya ambil adalah Sistem
-            Informasi di Fakultas Ilmu Komputer. Minat utama saya terfokus pada
-            perpaduan antara UI/UX dan Programmer. Saya sangat aktif dalam
-            berbagai kegiatan yang diadakan di dalam Universitas saya. Saya
-            senantiasa mencari peluang-peluang baru untuk memperluas pengalaman
-            dan meningkatkan keterampilan saya.
+            Saya lahir di Kota Purbalingga pada tanggal 10 Maret 2004. Saat ini, saya tengah menempuh pendidikan di Universitas Pembangunan Nasional
+            “Veteran” Jawa Timur, dengan jurusan yang saya ambil adalah Sistem Informasi di Fakultas Ilmu Komputer. Minat utama saya terfokus pada
+            perpaduan antara UI/UX dan Programmer. Saya sangat aktif dalam berbagai kegiatan yang diadakan di dalam Universitas saya. Saya senantiasa
+            mencari peluang-peluang baru untuk memperluas pengalaman dan meningkatkan keterampilan saya.
           </div>
         </div>
         <div class="content">
-          <img
-            class="foto"
-            src="../img/izzahbaru.jpg"
-            width="200"
-            height="200"
-            style="border-radius: 50%"
-            alt=""
-          />
+          <img class="foto" src="../img/izzahbaru.jpg" width="200" height="200" style="border-radius: 50%" alt="" />
           <p>Roudhotul Izzah I</p>
           <p>22082010244</p>
           <div class="container">
-            Saya lahir di Kota Surabaya, 14 Februari 2004. Saya adalah seorang
-            mahasiswa aktif di jurusan Sistem Informasi, fakultas Ilmu Komputer,
-            Universitas Pembangunan Nasional “Veteran” Jawa Timur yang memiliki
-            ketertarikan di bidang bisnis dan teknologi. Saya aktif dalam
-            mengikuti berbagai kegiatan yang menunjang ketertarikan saya baik di
-            dalam maupun di luar kampus, seperti organisasi. Saya membuka
-            peluang sebanyak-banyaknya untuk diri saya dalam rangka mendapatkan
-            pengalaman baru serta meningkatkan kemampuan saya.
+            Saya lahir di Kota Surabaya, 14 Februari 2004. Saya adalah seorang mahasiswa aktif di jurusan Sistem Informasi, fakultas Ilmu Komputer,
+            Universitas Pembangunan Nasional “Veteran” Jawa Timur yang memiliki ketertarikan di bidang bisnis dan teknologi. Saya aktif dalam
+            mengikuti berbagai kegiatan yang menunjang ketertarikan saya baik di dalam maupun di luar kampus, seperti organisasi. Saya membuka peluang
+            sebanyak-banyaknya untuk diri saya dalam rangka mendapatkan pengalaman baru serta meningkatkan kemampuan saya.
           </div>
         </div>
         <div class="content">
-          <img
-            class="foto"
-            src="../img/rifki.jpg"
-            width="200"
-            height="200"
-            style="border-radius: 50%"
-            alt=""
-          />
+          <img class="foto" src="../img/rifki.jpg" width="200" height="200" style="border-radius: 50%" alt="" />
           <p>M. Rifki Syahada</p>
           <p>22082010259</p>
           <div class="container">
-            Lahir di Maumere (Nusa Tenggara Timur) pada tanggal 24 April 2003,
-            saya adalah seorang mahasiswa yang aktif di jurusan Sistem Informasi
-            di Universitas Pembangunan Nasional “Veteran” Jawa Timur. Saya
-            memiliki minat yang besar dalam bidang Design. Saya juga aktif dalam
-            kegiatan-kegiatan yang ada di luar kampus yang sejalan dengan bakat
-            dalam diri saya. Saya percaya bahwa setiap kesempatan adalah peluang
-            untuk belajar dan tumbuh, dan saya berkomitmen untuk terus mencari
-            pengalaman baru dan menantang diri saya sendiri.
+            Lahir di Maumere (Nusa Tenggara Timur) pada tanggal 24 April 2003, saya adalah seorang mahasiswa yang aktif di jurusan Sistem Informasi di
+            Universitas Pembangunan Nasional “Veteran” Jawa Timur. Saya memiliki minat yang besar dalam bidang Design. Saya juga aktif dalam
+            kegiatan-kegiatan yang ada di luar kampus yang sejalan dengan bakat dalam diri saya. Saya percaya bahwa setiap kesempatan adalah peluang
+            untuk belajar dan tumbuh, dan saya berkomitmen untuk terus mencari pengalaman baru dan menantang diri saya sendiri.
           </div>
         </div>
       </div>
@@ -84,13 +120,13 @@
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <a href="#">Beranda</a>
-      <a href="../html/deskripsi.html">Tentang Game</a>
-      <a href="#">Pengembang</a>
+      <a href="#deskripsi">Tentang Game</a>
+      <a class="sub-menu" href="#flowchart">Flowchart Game</a>
+      <a class="sub-menu" href="#skenario">Skenario Game</a>
+      <a href="#Pengembang">Pengembang</a>
       <a class="sub-menu" href="../html/bio hawa.html">Anggota 1</a>
       <a class="sub-menu" href="../html/bio iza.html">Anggota 2</a>
       <a class="sub-menu" href="../html/bio rifki.html">Anggota 3</a>
-      <a href="#">Menu3</a>
-      <a href="#">Menu3</a>
     </div>
   </body>
 
